--- a/ios/OTAcceleratorPackUtilProject/OTAcceleratorPackUtil.xcodeproj/xcshareddata/xcschemes/OTAcceleratorPackUtil.xcscheme
+++ b/ios/OTAcceleratorPackUtilProject/OTAcceleratorPackUtil.xcodeproj/xcshareddata/xcschemes/OTAcceleratorPackUtil.xcscheme
@@ -14,10 +14,10 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "A0127AA91D34652500CDA3F5"
-               BuildableName = "OTAcceleratorPackUtil.framework"
+               BlueprintIdentifier = "A0127A8A1D34651B00CDA3F5"
+               BuildableName = "OTAcceleratorPackUtil.app"
                BlueprintName = "OTAcceleratorPackUtil"
-               ReferencedContainer = "container:OTAcceleratorPackUtilProject.xcodeproj">
+               ReferencedContainer = "container:OTAcceleratorPackUtil.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -29,6 +29,15 @@
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
       </Testables>
+      <MacroExpansion>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "A0127A8A1D34651B00CDA3F5"
+            BuildableName = "OTAcceleratorPackUtil.app"
+            BlueprintName = "OTAcceleratorPackUtil"
+            ReferencedContainer = "container:OTAcceleratorPackUtil.xcodeproj">
+         </BuildableReference>
+      </MacroExpansion>
       <AdditionalOptions>
       </AdditionalOptions>
    </TestAction>
@@ -42,15 +51,16 @@
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
       allowLocationSimulation = "YES">
-      <MacroExpansion>
+      <BuildableProductRunnable
+         runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "A0127AA91D34652500CDA3F5"
-            BuildableName = "OTAcceleratorPackUtil.framework"
+            BlueprintIdentifier = "A0127A8A1D34651B00CDA3F5"
+            BuildableName = "OTAcceleratorPackUtil.app"
             BlueprintName = "OTAcceleratorPackUtil"
-            ReferencedContainer = "container:OTAcceleratorPackUtilProject.xcodeproj">
+            ReferencedContainer = "container:OTAcceleratorPackUtil.xcodeproj">
          </BuildableReference>
-      </MacroExpansion>
+      </BuildableProductRunnable>
       <AdditionalOptions>
       </AdditionalOptions>
    </LaunchAction>
@@ -63,10 +73,10 @@
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "A0127AA91D34652500CDA3F5"
-            BuildableName = "OTAcceleratorPackUtil.framework"
+            BlueprintIdentifier = "A0127A8A1D34651B00CDA3F5"
+            BuildableName = "OTAcceleratorPackUtil.app"
             BlueprintName = "OTAcceleratorPackUtil"
-            ReferencedContainer = "container:OTAcceleratorPackUtilProject.xcodeproj">
+            ReferencedContainer = "container:OTAcceleratorPackUtil.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
    </ProfileAction>
